[gd_scene load_steps=3 format=2]

[ext_resource path="res://MessageBody.gd" type="Script" id=1]
[ext_resource path="res://MessageBoxes/MessagePanel.gd" type="Script" id=2]

[node name="MessagePanel" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Padding" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Padding"]
margin_right = 984.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Padding/VBoxContainer"]
margin_right = 984.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="SenderName" type="RichTextLabel" parent="Padding/VBoxContainer/HBoxContainer"]
margin_right = 490.0
margin_bottom = 20.0
rect_min_size = Vector2( 100, 20 )
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
scroll_active = false

[node name="TimeStamp" type="RichTextLabel" parent="Padding/VBoxContainer/HBoxContainer"]
margin_left = 494.0
margin_right = 984.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "[right]11:05[/right]"
text = "11:05"

[node name="MessageBody" type="RichTextLabel" parent="Padding/VBoxContainer"]
margin_top = 24.0
margin_right = 984.0
margin_bottom = 560.0
rect_clip_content = false
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
scroll_active = false
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
